Beginnings of CSS

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Clara's Website</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="assets/css/styles.css" />
     </head>
 
     <body>
