--- a/index.html
+++ b/index.html
@@ -16,16 +16,39 @@
                 </ul>
             </nav>
         </header>
+
+
         <main>
-            <h2>Welcome</h2>
-            <h3>Hello</h3>
+            <div class="box">
+                <h2>Welcome</h2>
+                <h3>Hello</h3>
+                <p>Paragraph here</p>
+
+                
+            </div>
+
+            <div class="box" id="box2">
+                <h2>Welcome</h2>
+                <h3>Hello</h3>
+                <br/>
+                <br/>
+            </div>
+
+            <br/>
+            <br/>
+
             <h4>Getting smaller</h4>
             <h5>Smaller again</h5>
             <h6>Smallest heading</h6>
 
+
             <p>This is a paragraph</p>
             <p>This is also a paragraph</p>
             <P>So is this</P>
+            <p>Here's a <a href="https://canberra.edu.au" target="_blank">link to the uni website</a>, it looks different</p>
+
+            
+
         </main>
         <footer>
             Footer
